--- a/development/index.html
+++ b/development/index.html
@@ -6,48 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>River Raid</title>
     <link rel="stylesheet" href="./css/main.css" />
-    <script src="js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <header class="header container">
-      <h1 class="logo"><span>Zaplanuj</span><span>Jedzonko</span></h1>
-      <nav>
-        <div class="hamburger pr-30">
-          <button>
-            <i class="fas fa-bars"></i>
-          </button>
-        </div>
-        <ul class="list__navigation unvisible">
-          <li>
-            <a href="#zaplanuj">ZAPLANUJ POSILKI!</a>
-          </li>
-          <li>
-            <a href="#dlaczego">DLACZEGO WARTO!</a>
-          </li>
-          <li>
-            <a href="#omnie">O MNIE</a>
-          </li>
-          <li>
-            <a href="#kontakt">KONTAKT</a>
-          </li>
-        </ul>
-      </nav>
+      <h1 class="logo"><span>River</span><span>Raid</span></h1>
     </header>
-    <main>
-      <section class="carusel container " id="dlaczego">
-        <div class="carusel-content pl-30 pr-30">
-          <i class="fas fa-arrow-left leftarrow"></i>
-          <ul>
-            <li class="visible"><h1>Dzięki tej aplikacji zaplanujesz plany żywienia!</h1> Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. </li>
-            <li><h1>Dodasz nowe przepisy, które wykorzystasz w swoich planach!</h1> Ut molestie a, ultricies porta urna. Vestibulum commodo volutpat a, convallis ac, laoreet enim. </li>
-            <li><h1>Będziesz mógł wyświetlać zapisane przepisy i plany na ekranie oraz je drukować! </h1> Pellentesque facilisis. Nulla imperdiet sit amet magna. Vestibulum dapibus, mauris nec malesuada fames ac turpis velit, rhoncus eu, l</li>
-          </ul>
-          <i class="fas fa-arrow-right rightarrow"></i>
-        </div>
-      </section>
-    </main>
+   <main>
 
-    <footer class="container pl-30 pr-30" id="kontakt">
+   </main>
+
+    <footer class="container pl-30 pr-30">
 
     </footer>
 
